fix centering on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -58,16 +58,9 @@ ul, li {
 
 .Intro {
   z-index:10;
-  top: 8vh;
   position: absolute;
-  /* left: 0;
-  right: 0;
-  padding: 8vw;
-  margin-left: auto;
-  margin-right: auto;
-  width: 100px;
-  top: 0;
-  bottom: 0; */
+  padding: 5vw;
+
 
 
 
